# rusty-clock

./: .env.example  .gitignore  Cargo.toml  Embed.toml  Justfile  README.md  build.rs  flake.nix  rust-toolchain.toml
.cargo/: config.toml
media/: circuit.avif
resources/: .gitignore  index.html  index.min.html.br  minify.nu
rusty-clock-macros/: Cargo.toml
rusty-clock-macros/src/: lib.rs
src/: i2c.rs  main.rs  priority_command.rs  pwm.rs  sleep.rs  utils.rs
src/bt/: ble_bas_central.rs  ble_bas_peripheral.rs  mod.rs
src/buzzer/: buzzer_struct.rs  listener.rs  mod.rs  task.rs
src/i2c/: mod.rs
src/lcd/: error.rs  hardware.rs  mod.rs  task.rs
src/pwm/: mod.rs
src/rtc_ds3231/: alarm.rs  command.rs  error.rs  listener.rs  mod.rs  rtc_time.rs  task.rs
src/wifi/: mod.rs
src/wireless/: mod.rs
src/wireless/bt/: ble_bas_peripheral.rs  ble_l2cap_peripheral.rs  gatt.rs  mod.rs
src/wireless/wifi/: dns.rs  mod.rs  routes.rs  sntp.rs  web_server.rs
src/wireless/wifi/web_server/: index.html  index.min.html  index.min.html.br  minify.nu  mod.rs  routes.rs
src/wireless/wifi/web_server/routes/: alarm.rs  buzzer.rs  debug.rs  lcd.rs  mod.rs  time.rs  timer.rs  volume.rs
