[workspace]
resolver = "3"
# members = ["rusty-clock-macros"]

[package]
edition      = "2024"
name         = "rusty-clock"
rust-version = "1.95"
version      = "0.1.0"

[[bin]]
name = "rusty-clock"
path = "./src/main.rs"

[dependencies]
# rusty-clock-macros = { path = "./rusty-clock-macros" }

esp-hal = { version = "=1.0.0-rc.1", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }

# Bumping these two to 0.(1)6.1 breaks esp-hal
esp-println = {version = "=0.16.0", features = ["esp32c3"]}
esp-config = "=0.6.0"

esp-rtos = { version = "0.1.1", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

embassy-net = { version = "0.8.0", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "mdns"
] }
esp-alloc = { version = "0.9.0", features = ["defmt", "nightly"] }
esp-backtrace = { version = "=0.18.0", features = [
  "defmt",
  "esp32c3",
  "panic-handler",
] }
# esp-println = { version = "0.16.0", features = ["defmt-espflash", "esp32c3"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = "0.7.2"
esp-radio = { version = "0.16.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  # "defmt",
  # "multicast",
  # "medium-ethernet",
  # "proto-dhcpv4",
  # "proto-dns",
  # "proto-ipv4",
  # "socket-dns",
  # "socket-icmp",
  # "socket-raw",
  # "socket-tcp",
  # "socket-udp",
  # "socket-mdns",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

static_cell      = { version = "2.1.1", features = ["nightly"] }
ds3231 = { version = "0.3.0", features = [ "defmt", "async"] }
chrono = { version = "0.4.43", default-features = false }
heapless = { version = "0.9.1", features = ["defmt", "nightly", "serde"] }
thiserror = { version = "2.0.18", default-features = false }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
sntpc = { version = "0.8", default-features = false, features = ["defmt"] }
sntpc-net-embassy = "*"
futures = { version = "0.3.31", default-features = false }
picoserve = { version = "0.18", features = ["defmt", "embassy"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
# bilge = "0.3.0"
# bumpalo = { version = "3.19.1", features = ["collections", "boxed", "allocator_api"] }
defmt-rtt = "1.1.0"
# konst = "0.3.16"
static_assertions = { version = "1.1.0", features = ["nightly"] }
# embedded-hal-async = "1.0.0"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
portable-atomic = { version = "1.13.0", default-features = false, features = ["serde",  "unsafe-assume-single-core"] }

[profile.dev.package.esp-radio]
opt-level = 3
[profile.release.package.esp-radio]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 0     # defmt cannot find location if debug < 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
panic            = 'abort'
strip            = 'debuginfo' # Symbols required for defmt

[build-dependencies]
brotli = { version = "8.0.2", features = ["simd"] }
html-minifier = "5.0.0"
