[workspace]
resolver = "3"
# members = ["rusty-clock-macros"]

[package]
edition      = "2024"
name         = "rusty-clock"
rust-version = "1.95"
version      = "0.1.0"

[[bin]]
name = "rusty-clock"
path = "./src/main.rs"
harness = false

[features]
ble = [
  "dep:trouble-host",
  "dep:bt-hci",
  "esp-radio/coex",
  "esp-radio/ble",
]

# # Uncomment in case internet fails
# [source.crates-io]
# replace-with = "vendored-sources"

# [source."git+https://github.com/AthereoAndromeda/lcd?branch=async"]
# git = "https://github.com/AthereoAndromeda/lcd"
# branch = "async"
# replace-with = "vendored-sources"

# [source."git+https://github.com/AthereoAndromeda/pcf857x-rs?branch=refcell"]
# git = "https://github.com/AthereoAndromeda/pcf857x-rs"
# branch = "refcell"
# replace-with = "vendored-sources"

# [source.vendored-sources]
# directory = "vendor"

[dependencies.pcf857x]
git = "https://github.com/AthereoAndromeda/pcf857x-rs"
branch = "refcell"
features = ["async"]


[dependencies.lcd]
git = "https://github.com/AthereoAndromeda/lcd"
branch = "async"
features = ["async"]

[dependencies]
# rusty-clock-macros = { path = "./rusty-clock-macros" }

esp-hal = { version = "~1.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = [
  "defmt",
  "esp32c3"
] }

esp-alloc = { version = "0.9.0", features = ["defmt", "nightly"] }
# for more networking protocol support see https://crates.io/crates/edge-net
esp-radio = { version = "0.17.0", features = [
  # "ble",
  # "coex",
  "defmt",
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }

trouble-host = { version = "0.5.0", features = ["gatt"], optional = true }
bt-hci = { version = "0.6.0", optional = true }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = "~0.7.2"
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-net = { version = "0.9.0", features = [
  "defmt",
  "dhcpv4",
  # "medium-ethernet",
  # "tcp",
  "udp",
  "mdns"
] }

smoltcp = {version = "0.12", default-features = false, features = ["proto-ipv4"]}

defmt = "1.0.1"
# defmt-rtt = "1.1.0"
rtt-target = { version = "0.6.2", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }

# embedded-io = { version = "0.7.1", features = ["defmt"] }
# embedded-io-async = { version = "0.7.0", features = ["defmt"] }

static_cell = { version = "2.1.1", features = ["nightly"] }
ds3231 = { version = "0.3.0", features = ["defmt", "async"] }
chrono = { version = "0.4.43", default-features = false, features = ["defmt"] }
heapless = { version = "0.9.1", features = ["defmt", "nightly", "serde"] }
thiserror = { version = "2.0.18", default-features = false }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
sntpc = { version = "0.9", default-features = false, features = ["defmt"] }
sntpc-net-embassy = "0.9"
# futures = { version = "0.3.31", default-features = false }
picoserve = { version = "0.18", features = ["defmt", "embassy"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
bilge = "0.3.0"
# bumpalo = { version = "3.19.1", features = ["collections", "boxed", "allocator_api"] }
static_assertions = { version = "1.1.0", features = ["nightly"] }
portable-atomic = { version = "1.13.0", default-features = false, features = ["fallback", "unsafe-assume-single-core"] }
explicit_cast = "1.0.0"
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
paste = "1.0.15"
# const-str = "1.1.0"

[build-dependencies]
brotli = { version = "8.0.2" }
html-minifier = "5.0.0"

[profile.dev.package.brotli]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3
[profile.dev.package.html-minifier]
opt-level = 3
[profile.release.package.html-minifier]
opt-level = 3

[profile.dev.package.esp-radio]
opt-level = 3
[profile.release.package.esp-radio]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level        = "s"
lto              = "fat"
incremental      = true

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 0     # WARN: defmt cannot find location if debug < 2
debug-assertions = false
incremental      = false
lto              = "fat"
opt-level        = "s"
overflow-checks  = false
panic            = "abort"
strip            = "debuginfo" # Symbols required for defmt

# Same as `release` but enables location tracing for defmt
[profile.release-location]
inherits = "release"
debug = 2
